<resources>
    <string name="retry">retry</string>
    <string name="no_result">No results 😓</string>
    <string name="test_long_single_line_text" translatable="false">long long long long long long long long long long long long long long text</string>
    <string name="project">Project</string>
    <string name="share">Share</string>
    <string name="open_with_browser">Open with browser</string>
    <string name="share_article_url">%1$sShare [%2$s]: %3$s</string>
    <string name="module_name">WanAndroid</string>
    <string name="home">Home</string>
    <string name="wechat">Wechat</string>
    <string name="wechat_and_author">Wechat / %1$s</string>
    <string name="top_tip">Top</string>
    <string name="new_tip">New</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Go to register.</string>
    <string name="user_login">User login</string>
    <string name="login_tip">Use WanAndroid account to login.</string>
    <string name="login_success">Login success.</string>
    <string name="username_not_empty">Username can\'t be empty</string>
    <string name="password_not_empty">Password can\'t be empty</string>
    <string name="not_login">Not login</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="my_collection">我的收藏</string>
    <string name="logout_success">已退出登录</string>
    <string name="default_author">匿名</string>
</resources>