<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainNav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/projectFragment"
        android:name="com.xiangaoole.android.wanandroid.ui.project.ProjectFragment"
        android:label="@string/project"
        tools:layout="@layout/fragment_common_list" />
    <fragment
        android:id="@+id/wechatFragment"
        android:name="com.xiangaoole.android.wanandroid.ui.wechat.WechatFragment"
        android:label="@string/wechat"
        tools:layout="@layout/fragment_common_list" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.xiangaoole.android.wanandroid.ui.home.HomeFragment"
        android:label="@string/module_name"
        tools:layout="@layout/fragment_common_list" />

</navigation>