<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/viewBackground"
    app:cardCornerRadius="@dimen/dp_1"
    app:cardElevation="@dimen/dp_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tvTopTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/bg_hot_tag"
            android:paddingHorizontal="@dimen/dp_4"
            android:paddingVertical="@dimen/dp_2"
            android:text="@string/top_tip"
            android:textColor="@color/Red"
            android:textSize="@dimen/sp_10"
            app:layout_constraintBaseline_toBaselineOf="@+id/authorText"
            app:layout_constraintEnd_toStartOf="@id/tvNewTip"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvNewTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/bg_hot_tag"
            android:paddingHorizontal="@dimen/dp_4"
            android:paddingVertical="@dimen/dp_2"
            android:text="@string/new_tip"
            android:textColor="@color/Red"
            android:textSize="@dimen/sp_10"
            app:layout_constraintBaseline_toBaselineOf="@+id/authorText"
            app:layout_constraintEnd_toStartOf="@id/tvArticleTag"
            app:layout_constraintStart_toEndOf="@id/tvTopTip" />

        <TextView
            android:id="@+id/tvArticleTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/bg_article_tag"
            android:paddingHorizontal="@dimen/dp_4"
            android:paddingVertical="@dimen/dp_2"
            android:text="@string/module_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_10"
            app:layout_constraintBaseline_toBaselineOf="@+id/authorText"
            app:layout_constraintEnd_toStartOf="@id/authorText"
            app:layout_constraintStart_toEndOf="@id/tvNewTip" />

        <TextView
            android:id="@+id/authorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/item_author"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toStartOf="@id/shareDateText"
            app:layout_constraintStart_toEndOf="@id/tvArticleTag"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="xiangaoolexiangaoolexiangaoole" />

        <TextView
            android:id="@+id/shareDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_date"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@+id/authorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/authorText"
            tools:text="2021-01-01 12:00" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="@color/item_title"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorText"
            tools:text="@string/test_long_single_line_text" />

        <TextView
            android:id="@+id/chapterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:textColor="@color/item_chapter"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            tools:text="内推 / 优质内推" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>